Update Global settings “home”

--- a/data/home.yml
+++ b/data/home.yml
@@ -1,5 +1,5 @@
 en:
-  title: Remix, a <span>theme for Hugo</span> fully editable with <span>Netlify
+  title: 1Remix, a <span>theme for Hugo</span> fully editable with <span>Netlify
     CMS</span>
   slogan: Nulla magna eiusmod ea eu irure exercitation non incididunt.
   shortDescription: |
