Update Global settings “home”

--- a/data/home.yml
+++ b/data/home.yml
@@ -1,6 +1,5 @@
 en:
-  title: 1Remix, a <span>theme for Hugo</span> fully editable with <span>Netlify
-    CMS</span>
+  title: 兰姿蕙质<span>月隐楼姿</span>从来几许如君貌 <span>不肯如君坠玉楼</span>
   slogan: Nulla magna eiusmod ea eu irure exercitation non incididunt.
   shortDescription: |
     
