Update Global settings “home”

--- a/data/home.yml
+++ b/data/home.yml
@@ -6,7 +6,7 @@ en:
     → Get your own copy of this website in minutes.
     → Edit everything with no single line of code.
     → It's free and open-source!
-  image: /media/wave.jpg
+  image: /media/az7a3754-副本.jpg
   copyright: "  © 2017-2022 - OhBonsaï &"
   register: Roneo.org
   registerUrl: https://roneo.org/en
