Update Global settings “home”

--- a/data/home.yml
+++ b/data/home.yml
@@ -3,12 +3,12 @@ en:
   slogan: Nulla magna eiusmod ea eu irure exercitation non incididunt.
   shortDescription: |
     
-    → Get your own copy of this website in minutes.
-    → Edit everything with no single line of code.
-    → It's free and open-source!
+    👒 遇见你之后,我的伟大抱负和一腔热血,都变成黄昏与你回家,走在小路上的简单愿望。
+    ☘️ 岁月静好，很想和你就这样一起安然老去，不紧不慢，不慌不忙。
+    🌁 天地广阔也不如囿于你，人山人海也未有我钟意，你之外万物都无引力，我不想要新意，只想要你。
   image: /media/az7a3754-副本.jpg
-  copyright: "  © 2017-2022 - OhBonsaï &"
-  register: Roneo.org
+  copyright: "  © 2022 - Vikim & Katherine"
+  register: louzihan.ml
   registerUrl: https://roneo.org/en
 fr:
   image: /media/wave.jpg
